# sql-skreenit

./: .dockerignore  .gitattributes  .gitignore  ANALYSIS_COMPLETE.md  ANALYSIS_SUMMARY.md  BACKEND_COMPATIBILITY_ANALYSIS.md  BingSiteAuth.xml  CNAME  COMPLETE_ERROR_FIX_REPORT.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT.md  Dockerfile  IMMEDIATE_ACTIONS.md  LOCAL-SERVER-SETUP.md  MAIN_NEW_PY_FIXES.md  PROJECT_ERROR_ANALYSIS.md  QUICK_REFERENCE.md  README.md  ROUTER_MIGRATION_GUIDE.md  SERVICE_ARCHITECTURE_ISSUES.md  TROUBLESHOOTING_GUIDE.md  _cfignore  add_job_fields.sql  cleanup_data.sql  config.yml  database_column_comparison_report.md  fix_all_imports.py  fix_env_encoding.py  folder_structure.txt  index.html  requirements.txt  robots.txt  sitemap.xml  start-tunnel.bat  test_auth_system.py  test_file.html  tunnel-bridge.py  verify_auth_integrity.py  verify_auth_integrity_simple.py
app/: index.html
applicant/: candidate-profile-backup.html  candidate-profile.html  detailed-application-form.html  index.html  my-applications.html  temp-video.html  test-resume-analysis.html
assets/: _headers  index.html
backend/: .env.clean  .env.local  __init__.py  add_user_metadata_column.sql  check_schema.py  comprehensive_test.py  config.py  database.py  database_minimal.py  database_simple.py  debug_profile.py  generate_jwt_key.py  list_tables.py  mailer.py  main.py  main_clean.py  main_minimal.py  main_new.py  main_new_custom.py  migrate_company_display_id.py  pyproject.toml  render.yaml  requirements.txt  structure.txt  test_all_imports.py  test_connection.py  test_custom_auth.py  test_db.py  test_imports.py  test_minimal.py  test_no_routers.py  test_ollama.py  test_real_user.py  test_simple.py  test_smtp.py  test_uvicorn.py
backend/middleware/: auth_middleware.py  request_id.py  role_required.py  security_headers.py
backend/migrations/: alter_interview_tables.sql  update_interview_tables.sql
backend/models/: __init__.py  analytics_models.py  applicant_models.py  auth_models.py  dashboard_models.py  notification_models.py  recruiter_models.py  shared_schemas.py  video_models.py
backend/routers/: __init__.py  analytics.py  applicant.py  applicant_new.py  auth.py  dashboard.py  dashboard_new.py  locations.py  notification.py  notifications.py  notifications_new.py  recruiter.py  recruiter_new.py  reference.py  video.py
backend/scripts/: create_master_admin.py  generate_admin_hash.py  import_excel_data.py  seed_reference_data.py
backend/services/: __init__.py  analytics_service.py  analytics_service_mysql.py  applicant_service.py  applicant_service_mysql.py  assessment_report_service.py  audio_analysis_service.py  auth_service.py  auth_service_mock.py  background_tasks.py  dashboard_service.py  dashboard_service_mysql.py  email_service.py  face_match_service.py  mysql_service.py  mysql_service_updated.py  mysql_services_simple.py  nlp_analysis_service.py  notification_service.py  notification_service_mysql.py  pdf_report_service.py  r2_service.py  recruiter_service.py  recruiter_service_mysql.py  supabase_client.py  video_analysis_service.py  video_service.py  video_service_mysql.py  visual_behavior_service.py
backend/utils_others/: __init__.py  email_templates.py  error_handler.py  grading.py  logger.py  rbac.py  rbac_config.py  resend_email.py  resend_template.py  security.py
backend/utils_others/templates/: password_reset.html  password_updated.html  welcome.html
dashboard/: analysis.html  application-details.html  application-list.html  candidate-dashboard.html  index.html  interview-room.html  job-details.html  my-jobs.html  recruiter-dashboard.html
database/: 432595843_sql_skreenit.sql  Colleges.xlsx  Lates_sql_skreenit.sql  Skreenit_Final_Taxonomy.xlsx  Skreenit_Global_Countries.xlsx  Skreenit_Global_States.xlsx  Skreenit_Global_Taxonomy_V2.xlsx  Universities.xlsx  add_company_display_id.sql  add_company_display_id_column.sql  add_description_back.sql  check_actual_columns.sql  check_companies_table.sql  check_constraints_triggers.sql  check_existing_companies.sql  check_location_column.sql  check_recruiter_company_id.sql  check_user_exists.sql  countries.json  dpts_dsgnts.xlsx  migration_cleanup.sql  migration_rename_to_intro_videos.sql  schema.sql  schema_clean.sql  states.json  test_insert_company.sql  test_location_update.sql  u432595843_db_skreenit.sql  u432595843_sql_skreenit.sql  universities.json
database files/: add_missing_columns.sql  create_candidate_drafts.sql  create_recruiter_profiles.sql  database-schema.sql  database_reset_clear_data.sql  database_reset_drop_all.sql  database_rls_policies.sql  database_schema.sql  database_schema_idempotent.sql  fix_recruiter_profiles_columns.sql  fix_rls_policies.sql  schema_fix.sql  simple_fix.sql  supabase_setup.sql
demo/: index.html
hrms/: index.html
in/: index.html
jobs/: index.html  jobs.html
legal/: index.html  privacy-policy.html  terms-conditions.html
(+105 files in other folders)
