[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skreenit-backend"
version = "1.0.0"
description = "Backend API for Skreenit recruitment platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Skreenit Team", email = "support@skreenit.com"}
]
requires-python = ">=3.10"

dependencies = [
    # Core backend
    "fastapi>=0.110,<0.117",
    "uvicorn[standard]>=0.23,<0.36",
    "httpx>=0.24,<0.29",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.6,<3",
    "python-multipart>=0.0.6,<0.0.21",
    "email-validator>=2.0,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<5.0",
    "jinja2>=3.1,<4.0",
    "PyJWT>=2.0,<3.0",

    # Database
    "sqlalchemy>=2.0,<3.0",
    "pymysql>=1.1,<2.0",
    "cryptography>=41.0",

    # Cloud
    "boto3>=1.26,<4.0",
    "resend>=0.8",

    # ML stack (Render-safe)
    "opencv-python-headless==4.8.0.74",
    "numpy>=1.23,<1.27",
    "pillow>=10.0",
    "ffmpeg-python>=0.2.0",
    "mediapipe==0.10.14",
    "fer==22.5.0",
    "onnxruntime==1.17.1",
    "textblob>=0.17",
    "nltk>=3.8",
    "textstat>=0.7",
    "scipy>=1.12",
    "soundfile==0.11.0",
    "eng-to-ipa>=0.0.2",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://skreenit.com"
Documentation = "https://docs.skreenit.com"
Repository = "https://github.com/itsmepskiran/sql-skreenit"
Issues = "https://github.com/itsmepskiran/sql-skreenit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "routers*", "models*", "middleware*", "utils_others*"]
